01 - OpenCRVS Documentation/v1.3/setup/3.-installation/3.3-set-up-a-server-hosted-environment/3.3.5-setup-dns-a-records.md
---
title: "3.3.5 Setup DNS A records"
source_url: "https://documentation.opencrvs.org/v1.3/setup/3.-installation/3.3-set-up-a-server-hosted-environment/3.3.5-setup-dns-a-records"
markdown_url: "https://documentation.opencrvs.org/v1.3/setup/3.-installation/3.3-set-up-a-server-hosted-environment/3.3.5-setup-dns-a-records.md"
version: "v1.3"
retrieved_at: "2026-09-16T15:06:42Z"
content_hash: "sha256:6137c1464ab80b328c6bb545cb64f6445ede39ad6ea4a2c8d7a440abe1dd1518"
---

> For the complete documentation index, see [llms.txt](https://documentation.opencrvs.org/llms.txt). Markdown versions of documentation pages are available by appending `.md` to page URLs; this page is available as [Markdown](https://documentation.opencrvs.org/v1.3/setup/3.-installation/3.3-set-up-a-server-hosted-environment/3.3.5-setup-dns-a-records.md).

# 3.3.5 Setup DNS A records

Using your domain management system, A records will need to be created for all the services which are publicly exposed.

This also enables the Traefik SSL cert to be successfully generated. The SSL cert is signed by [LetsEncrypt](https://letsencrypt.org/).

Either use a wildcard or create individual A records for your chosen domain name, with a TTL of 1 hour that forwards the URL to your **manager server node's** external IP address.

{% hint style="info" %}
The easiest approach is to use a wildcard. For example: \*.\<your\_domain> although this is not as secure in production.
{% endhint %}

### Option 1: Wildcard required A Records:

{% hint style="info" %}
2 A Records are required for this option
{% endhint %}

*\<your\_domain>*

*\*.\<your\_domain>*

### Option 2: Individual A Records

{% hint style="info" %}
16 A Records are required for this option
{% endhint %}

*\<your\_domain>*

*auth.\<your\_domain>*

*config.\<your\_domain>*

*countryconfig.\<your\_domain>*

*documents.\<your\_domain>*

*metabase.\<your\_domain>*

*minio.\<your\_domain>*

*minio-console.\<your\_domain>*

*ui-kit.\<your\_domain>*

*gateway.\<your\_domain>*

*kibana.\<your\_domain>*

*login.\<your\_domain>*

*openhim-api.\<your\_domain>*

*openhim.\<your\_domain>*

*register.\<your\_domain>*

*webhooks.\<your\_domain>*

{% hint style="info" %}
If you are enabling [external interoperability access directly to OpenHIM](/v1.3/technology/interoperability/other-ways-to-interoperate.md), you will also need a domain for it such as this: *api.\<your\_domain>* but be careful to only add this domain if you understand the whitelisting Traefik steps required. You could open yourself up to DDOS attack this way.
{% endhint %}


---

# Agent Instructions
This documentation is published with GitBook. GitBook is the documentation platform designed so that both humans and AI agents can read, navigate, and reason over technical content effectively. Learn more at gitbook.com.

## Querying This Documentation
If you need additional information that is not directly available in this page, you can query the documentation dynamically by asking a question.

Perform an HTTP GET request on the current page URL with the `ask` query parameter, and the optional `goal` query parameter:

```
GET https://documentation.opencrvs.org/v1.3/setup/3.-installation/3.3-set-up-a-server-hosted-environment/3.3.5-setup-dns-a-records.md?ask=<question>&goal=<endgoal>
```

`ask` is the immediate question: it should be specific, self-contained, and written in natural language.
`goal` is optional and describes the broader end goal you are ultimately trying to accomplish on behalf of the user. GitBook uses it to tailor the answer towards what is most useful for that goal.

The response will contain a direct answer to the question and relevant excerpts and sources from the documentation.

Use this mechanism when the answer is not explicitly present in the current page, you need clarification or additional context, or you want to retrieve related documentation sections.
