01 - OpenCRVS Documentation/v1.4/setup/3.-installation/3.3-set-up-a-server-hosted-environment/3.3.5-setup-dns-a-records.md
---
title: "4.3.2 HTTPS & Networking"
source_url: "https://documentation.opencrvs.org/v1.4/setup/3.-installation/3.3-set-up-a-server-hosted-environment/3.3.5-setup-dns-a-records"
markdown_url: "https://documentation.opencrvs.org/v1.4/setup/3.-installation/3.3-set-up-a-server-hosted-environment/3.3.5-setup-dns-a-records.md"
version: "v1.4"
retrieved_at: "2026-09-16T15:06:42Z"
content_hash: "sha256:ae147f762ddb7117845c0ba52f12c00f355e6dbb639e3731360db448653da695"
---

> For the complete documentation index, see [llms.txt](https://documentation.opencrvs.org/llms.txt). Markdown versions of documentation pages are available by appending `.md` to page URLs; this page is available as [Markdown](https://documentation.opencrvs.org/v1.4/setup/3.-installation/3.3-set-up-a-server-hosted-environment/3.3.5-setup-dns-a-records.md).

# 4.3.2 HTTPS & Networking

{% embed url="<https://youtu.be/eb1aeFstOGg>" %}

Watch the videos above to understand the OpenCRVS network and how TLS is configured in OpenCRVS servers&#x20;

### Domain A records

Using your domain management system, A records will need to be created for all the services which are publicly exposed.

This also enables the Traefik SSL cert to be successfully generated by LetsEncrypt when using HTTPS or DNS challenge.

Either use a wildcard or create individual A records for your chosen domain name, with a TTL of 1 hour that forwards the URL to your **manager server node's** external IP address.

{% hint style="info" %}
The easiest approach is to use a wildcard. For example: \*.\<your\_domain> although this is not as secure in production.
{% endhint %}

#### Option 1: Wildcard required A Records:

{% hint style="info" %}
2 A Records are required for this option
{% endhint %}

*\<your\_domain>*

*\*.\<your\_domain>*

#### Option 2: Individual A Records:

{% hint style="info" %}
16 A Records are required for this option
{% endhint %}

*\<your\_domain>*

*auth.\<your\_domain>*

*config.\<your\_domain>*

*countryconfig.\<your\_domain>*

*documents.\<your\_domain>*

*metabase.\<your\_domain>*

*minio.\<your\_domain>*

*minio-console.\<your\_domain>*

*ui-kit.\<your\_domain>*

*gateway.\<your\_domain>*

*kibana.\<your\_domain>*

*login.\<your\_domain>*

*openhim-api.\<your\_domain>*

*openhim.\<your\_domain>*

*register.\<your\_domain>*

*webhooks.\<your\_domain>*

If using our Wireguard VPN:

*vpn.\<your\_domain>*

{% hint style="warning" %}
Our Wireguard VPN is not designed for use at scale.  The Wireguard VPN Admin interface hosted at vpn.\<your-domain> uses [wg-easy](https://github.com/wg-easy/wg-easy). OpenCRVS accepts no responsibility for the penetration testing or security of the Wireguard VPN or WG Easy. Use at your own risk.
{% endhint %}

{% hint style="info" %}
If you are enabling [external interoperability access directly to OpenHIM](/v1.4/technology/interoperability/other-ways-to-interoperate.md), you will also need this A record for it: *api.\<your\_domain>* but be careful to only add this domain if you understand the whitelisting Traefik steps required.  Refer to the docker-compose files to see comments regarding how to whitelist OpenHIM.
{% endhint %}

### LetsEncrypt HTTPS Challenge

Traefik config is required to be edited in your docker-compose files for your environment listed [here](https://github.com/opencrvs/opencrvs-countryconfig/tree/develop/infrastructure), in order to configure the LetsEncrypt HTTPS challenge mechanism for SSL cert generation in **development** or **qa** environments:

```
- --certificatesresolvers.certResolver.acme.email=<your email address>
- --certificatesresolvers.certResolver.acme.storage=acme.json
- --certificatesresolvers.certResolver.acme.caserver=https://acme-v02.api.letsencrypt.org/directory
- --certificatesresolvers.certResolver.acme.httpchallenge.entrypoint=web
- --certificatesresolvers.certResolver.acme.httpchallenge=true
```

###

### LetsEncrypt DNS Challenge

Traefik config is required to be edited in your docker-compose files for your environment in order to configure the LetsEncrypt DNS challenge mechanism for SSL cert generation in **production** or **staging** environments.  LetsEncrypt supports APIs for the following providers:

{% embed url="<https://doc.traefik.io/traefik/https/acme/#providers>" %}

In this example, Google Domains is the configured provider.  The environment variable GOOGLE\_DOMAINS\_ACCESS\_TOKEN is manually added to the Github environment as a secret.

<pre><code><strong>environment:
</strong> - GOOGLE_DOMAINS_ACCESS_TOKEN=${GOOGLE_DOMAINS_ACCESS_TOKEN}
command:
 - --certificatesresolvers.certResolver.acme.dnschallenge=true
 - --certificatesresolvers.certResolver.acme.dnschallenge.provider=googledomains
 - --certificatesresolvers.certResolver.acme.email=&#x3C;your email address>
 - --certificatesresolvers.certResolver.acme.storage=acme.json
</code></pre>

### Pre-existing TLS certificates

Traefik config is required to be edited in your docker-compose files for your environment in order to use pre-existing TLS certificates. &#x20;

1. Once your environment is provisioned, manually add your certificate files into the /data/traefik/certs directory on your server so that they are picked up.
2. Create a file named certs.yaml in the infrastructure/traefik folder like this:&#x20;

```
tls:
  stores:
    default:
      defaultCertificate:
        certFile: /etc/certs/<your combined leaf, intermediate & root, certfile>.crt
        keyFile: /etc/certs/<your cert private key file>.key
  certificates:
    - certFile: /etc/certs/<your combined leaf, intermediate & root, certfile>.crt
      keyFile: /etc/certs/<your cert private key file>.key
      stores:
        - default
```

3. Use the Traefik config below to access the cert.yaml file, remove any lines that start with "--certificatesresolvers.certResolver.acme" :

```
volumes:
      - /var/run/docker.sock:/var/run/docker.sock
      - /data/traefik/certs:/certs
      - /opt/opencrvs/infrastructure/traefik/certs.yaml:/etc/traefik/certs.yaml
    command:
      - --providers.file.directory=/etc/traefik
      - --providers.file.watch=true
```

4. If the certificate is different for each environment, you will have to edit the "Provision" Github Actions to write the contents of the .crt & .key files in the /data/traefik/certs directory on your server from new Github environment secrets you will manually have to create.  In the file infrastructure/server-setup/tasks/traefik.yml, add these lines at the end of the file:

```
- name: Create crt file with variable content
  copy:
    dest: "/data/traefik/certs/cert.crt"
    content: |
      {{ssl_crt}}
    owner: root
    group: application
    mode: 0644
  when: ssl_crt is defined and ssl_crt | length > 0

- name: Create key file with variable content
  copy:
    dest: "/data/traefik/certs/cert.key"
    content: |
      {{ssl_key}}
    owner: root
    group: application
    mode: 0600
  when: ssl_key is defined and ssl_key | length > 0
```

5. Add these 2 new Github environment secrets SSL\_CRT & SSL\_KEY to the "Set variables for ansible in production environments" step in the file .github/workflows/provision.yml

```
ssl_crt: ${{ secrets.SSL_CRT }}
ssl_key: ${{ secrets.SSL_KEY }}
```


---

# Agent Instructions
This documentation is published with GitBook. GitBook is the documentation platform designed so that both humans and AI agents can read, navigate, and reason over technical content effectively. Learn more at gitbook.com.

## Querying This Documentation
If you need additional information that is not directly available in this page, you can query the documentation dynamically by asking a question.

Perform an HTTP GET request on the current page URL with the `ask` query parameter, and the optional `goal` query parameter:

```
GET https://documentation.opencrvs.org/v1.4/setup/3.-installation/3.3-set-up-a-server-hosted-environment/3.3.5-setup-dns-a-records.md?ask=<question>&goal=<endgoal>
```

`ask` is the immediate question: it should be specific, self-contained, and written in natural language.
`goal` is optional and describes the broader end goal you are ultimately trying to accomplish on behalf of the user. GitBook uses it to tailor the answer towards what is most useful for that goal.

The response will contain a direct answer to the question and relevant excerpts and sources from the documentation.

Use this mechanism when the answer is not explicitly present in the current page, you need clarification or additional context, or you want to retrieve related documentation sections.
